корректировка swagger
