# internal/docs/swagger.yaml
@@ -170,6 +170,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/app.ErrResponseJSON'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/app.ErrResponseJSON'
         "500":
           description: Internal Server Error
           schema:
